feat: top level mui

--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "npm": ">=7.0.0",
     "node": ">=14.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3"
+  },
   "packageManager": "yarn@1.22.4"
 }
