--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install Browsers
         run: yarn test-install
 
-      - name: Run tests
+      - name: Run Tests
         run: yarn test
 
   release:
